2025-12-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (get_color_element): Rename this...
	(read_color_channel_value): ...to this.
	(read_rgb, read_cmy, read_cmyk, read_gray): Update call sites.

2025-12-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (get_char_for_escape_parameter):
	Rename this...
	(read_char_in_escape_sequence_parameter): ...to this.
	(read_long_escape_parameters, read_escape_parameter)
	(read_increment_and_escape_parameter): Update call sites.

2025-12-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (get_line_arg): Rename this...
	(read_line_rule_expression): ...to this.  Update forward
	declaration.
	(token:next): Update call site.

2025-12-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (token::is_usable_as_delimiter):
	Explicitly clear stack-allocated buffer before otherwise writing
	to it, for paranoia's sake.

2025-12-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp: Fix code style nits.
	(get_color_element): Favor value constructor over C-style type
	cast.
	(read_rgb, read_cmy, read_cmyk, read_gray)
	(interpolate_string_with_args): Arrange equality comparisons to
	avoid inadvertent lvalue assignment.
	(token::next, interpolate_string, interpolate_string_with_args)
	(chop_macro, do_string_case_transform, substring_request)
	(unformat_macro, write_macro_request): Explicitly compare value
	of pointer type to null pointer literal instead of letting it
	pun down to a Boolean.

2025-12-17  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp: Fix code style nits.
	(file_iterator::fill, file_iterator::peek): Stop pointlessly
	constructing a new `int` from an existing one.
	(file_iterator::fill): Arrange equality comparisons to avoid
	inadvertent lvalue assignment.

2025-12-17  G. Branden Robinson <g.branden.robinson@gmail.com>
